--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "~3.2.4",
+    "express-session": "^1.15.6",
     "mongoose": "^5.2.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
